<resources>
    <string name="app_name">Box Inventario</string>

    <string name="TituloMenu">Menu</string>

    <string name="MensajeBienvenida1">Bienvenidos</string>
    <string name="MensajeBienvenida2">Esta aplicacion tiene como intencio ayudarle a gestionar sus compras y sus articulos</string>
    <string name="Articulos">Articulos</string>
    <string name="Listas">Listas de compras</string>
    <string name="Lugaresinteres">Lugares de interes</string>
    <string name="Recordatorios"></string>

    <string name="VentanaArticulos">Articulos</string>
    <string name="botoncreararticulo">Crear un nuevo articulo</string>

    <string name="VentanaListas">Listas</string>
    <string name="botoncrearlista">Crear una nueva lista</string>

    <string name="VentanaLugar">Lugares de interes</string>
    <string name="botoncrearlugarinteres">Crear un nuevo lugar de interes</string>

    <string name="VentanaRecordatorio">Recordatorio</string>
    <string name="botoncrearrecordatorio">Crear un nuevo recordatorio</string>

    <string name="VentanaUsuario">Regristrar usuario</string>
    <string name="Usuario">Usuario</string>
    <string name="IngresarNombre">Ingrese su nombre:</string>
    <string name="Nombre">Su nombre</string>
    <string name="IngresarCorreo">Ingrese su correo:</string>
    <string name="Correo">Su correo</string>
    <string name="Guardarsesion">Iniciar sesion</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="DescripcionProducto">Descripcion</string>

    <string name="EditarProducto">Editar</string>

    <string name="CrearProducto">Crear Producto</string>
    <string name="NombreProducto">Nombre</string>
    <string name="CantidadProducto">Cantidad</string>
    <string name="PrecioProducto">Precio</string>
    <string name="CategoriaProducto">Categoria</string>
    <string name="UbicacionProducto">Ubicacion</string>
    <string name="FechaProducto">Fecha</string>
    <string name="GuardarProducto">Guardar</string>
    <string name="CancelarProducto">Cancelar</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>