<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crearproductos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".clases.DescipcionProductos">

    <EditText
        android:id="@+id/nombreproducto"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="53dp"
        android:hint="@string/NombreProducto"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imagendeproducto"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagendeproducto"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/articulo_foreground" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="217dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreproducto">

        <LinearLayout
            android:id="@+id/Enunciados"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cantidaddeproducto"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="Cantidad: "
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/preciodeproducto"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="Precio: "
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/categoriadeproducto"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="Categoria: "
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ubicaciondeproducto"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="Ubicacion: "
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fechadeproducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Fecha: "
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editables"
            android:layout_width="227dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-6dp"
            android:layout_toEndOf="@+id/Enunciados"
            android:orientation="vertical">

            <EditText
                android:id="@+id/numerodecantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CantidadProducto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numerodeprecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PrecioProducto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombredecategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CategoriaProducto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombredeubicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/UbicacionProducto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numerodefecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/FechaProducto"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="47dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="Boton de editar"
            android:drawableTint="#FFFFFF"
            android:text="@string/GuardarProducto"
            android:textSize="20sp"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/cancelar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="Boton de editar"
            android:drawableTint="#FFFFFF"
            android:onClick="Cancelar"
            android:text="@string/CancelarProducto"
            android:textSize="20sp"
            app:cornerRadius="100dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>